feat: `ktfmt` binary via `native-image`
Introduces a `ktfmt` binary, built using GraalVM's
`native-image` tool. The binary behaves the same
way as `ktfmt`'s existing JVM-based CLI, but is
compiled ahead-of-time into a native executable.

Signed-off-by: Sam Gammon <sam@elide.dev>